samples/_failures_safe/1761726818_f08029_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0035120.c: In function ‘main’:
./samples/SAFE/__tmp_b0035120.c:171:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  171 |     int k
      |     ^~~
./samples/SAFE/__tmp_b0035120.c:171:5: error: expected declaration or statement at end of input
